--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -36,8 +36,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>836</width>
-        <height>511</height>
+        <width>895</width>
+        <height>510</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -278,9 +278,6 @@ background: white;</string>
          </item>
          <item row="2" column="2">
           <widget class="QLabel" name="middleLabel">
-           <property name="toolTip">
-            <string>Arado Websearch • The Open Source Websearch built collaboratively: Everybody feeds Everybody.</string>
-           </property>
            <property name="text">
             <string/>
            </property>
@@ -358,6 +355,13 @@ Flashmark</string>
            </property>
            <property name="text">
             <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QCheckBox" name="autoCheck">
+           <property name="text">
+            <string>Auto-Refresh</string>
            </property>
           </widget>
          </item>
