--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -90,14 +90,35 @@
              <height>16777215</height>
             </size>
            </property>
+           <property name="alternatingRowColors">
+            <bool>true</bool>
+           </property>
+           <property name="showGrid">
+            <bool>false</bool>
+           </property>
+           <property name="gridStyle">
+            <enum>Qt::DashLine</enum>
+           </property>
+           <property name="wordWrap">
+            <bool>false</bool>
+           </property>
+           <attribute name="horizontalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderStretchLastSection">
+            <bool>false</bool>
+           </attribute>
            <column>
             <property name="text">
-             <string>Browse</string>
+             <string/>
             </property>
            </column>
            <column>
             <property name="text">
-             <string>Unread RSS Items</string>
+             <string>Unread RSS News</string>
+            </property>
+            <property name="textAlignment">
+             <set>AlignLeft|AlignVCenter</set>
             </property>
            </column>
           </widget>
