--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -279,7 +279,7 @@ background: white;</string>
          <item row="2" column="2">
           <widget class="QLabel" name="middleLabel">
            <property name="toolTip">
-            <string>Arado Websearch • The Open Source Websearch built collaboratively: Everybody feeds Everybody.</string>
+            <string>Arado Websearch • The Open Source Websearch empowering common people.</string>
            </property>
            <property name="text">
             <string/>
@@ -387,6 +387,7 @@ Flashmark</string>
   <tabstop>addUrlButton</tabstop>
  </tabstops>
  <resources>
+  <include location="../arado.qrc"/>
   <include location="../arado.qrc"/>
  </resources>
  <connections/>
