--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -90,6 +90,11 @@
              <height>16777215</height>
             </size>
            </property>
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
            <property name="alternatingRowColors">
             <bool>true</bool>
            </property>
@@ -115,7 +120,7 @@
            </column>
            <column>
             <property name="text">
-             <string>Unread RSS News</string>
+             <string>Unread News</string>
             </property>
             <property name="textAlignment">
              <set>AlignLeft|AlignVCenter</set>
@@ -167,7 +172,7 @@
            </column>
            <column>
             <property name="text">
-             <string>Feed URL</string>
+             <string>Feed URL (RSS / Atom)</string>
             </property>
            </column>
           </widget>
@@ -188,7 +193,7 @@
       </font>
      </property>
      <property name="text">
-      <string>My RSS Feed List</string>
+      <string>My RSS-Feeds</string>
      </property>
     </widget>
    </item>
@@ -271,6 +276,35 @@
        <width>32</width>
        <height>32</height>
       </size>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="rssitemsrefreshdisplayButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="toolTip">
+      <string>Look for an update now manually.</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../arado.qrc">
+       <normaloff>:/images/down.png</normaloff>:/images/down.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
