--- a/ui/rss-list.ui
+++ b/ui/rss-list.ui
@@ -107,6 +107,12 @@
            <property name="wordWrap">
             <bool>false</bool>
            </property>
+           <attribute name="horizontalHeaderDefaultSectionSize">
+            <number>24</number>
+           </attribute>
+           <attribute name="horizontalHeaderMinimumSectionSize">
+            <number>24</number>
+           </attribute>
            <attribute name="horizontalHeaderStretchLastSection">
             <bool>true</bool>
            </attribute>
